Внес изменение в метод перемещения узлов в дереве. Добавил проверку слага объектов на одном уровне вложенности при перемещении

--- a/catalog/templates/catalog/admin/tree_list.html
+++ b/catalog/templates/catalog/admin/tree_list.html
@@ -50,6 +50,10 @@
 {% endblock %}
 {% endif %}
 
+{% block messages %}
+    <ul class="messagelist"></ul>
+{% endblock messages %}
+
 {% block coltype %}flex{% endblock %}
 
 {% block content %}
