--- a/catalog/templates/catalog/admin/tree_list.html
+++ b/catalog/templates/catalog/admin/tree_list.html
@@ -66,6 +66,7 @@
            {% block filters %}{% endblock %}
 
             <div class="catalog">
+                <div id="overlay"></div>
                 <div id="left-col">
                     <div id="search_box">
                         <input type="text" id="tree_search"
