--- a/catalog/templates/catalog/breadcrumbs.html
+++ b/catalog/templates/catalog/breadcrumbs.html
@@ -1,7 +1,7 @@
 {% for item in breadcrumbs %}
 	<span class="breadcrumb">
         <a href="{{ item.get_absolute_url }}">
-            {{ item.name }}
+            {{ item }}
         </a>&nbsp;&rarr;&nbsp;&nbsp;
      </span>
 {% endfor %}
