--- a/catalog/templates/catalog/tree.html
+++ b/catalog/templates/catalog/tree.html
@@ -1,7 +1,7 @@
 {% load catalog_tags %}
 {% if tree_list %}
     {% for object in tree_list %}
-        <a href="{{ object.get_absolute_url }}"><li>{{ object }}</li></a>
+        {% if object.get_absolute_url %}<a href="{{ object.get_absolute_url }}"><li>{{ object }}</li></a>{% endif %}
         {% if object.tree.get.get_children %}
             <ul>{% render_catalog_tree for object.tree.get %}</ul>
         {% endif %}
