Формирование списка полей для отображения в системе управления по значениям в list_display. Добавил setup.py

--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -84,7 +84,7 @@
                     <thead>
                         <tr>
                             <% _.each(fields, function(field){ %>
-                                <th><%= field %></th>
+                                <th><%= field[1] %></th>
                             <% }); %>
                         </tr>
                     </thead>
@@ -92,7 +92,7 @@
                         <% _.each(items, function(item){ %>
                             <tr>
                                 <% _.each(fields, function(field){ %>
-                                    <td><%= item[field] %></td>
+                                    <td><%= item[field[0]] %></td>
                                 <% }); %>
                             </tr>
                         <% }); %>
