--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -70,7 +70,7 @@
                 <div id="left-col">
                     <div id="search_box">
                         <input type="text" id="tree_search"
-                               placeholder="search, (esc) for clear">
+                               placeholder="{% trans 'search, (esc) for clear' %}">
                     </div>
                     <div id="tree_container"></div>
                 </div>
