--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -72,6 +72,9 @@
                         <input type="text" id="tree_search"
                                placeholder="{% trans 'search, (esc) for clear' %}">
                     </div>
+                    <div id="catalog-root-btn" class="jstree-default">
+                        <i class="jstree-icon jstree-themeicon" role="presentation"></i>{% trans 'Catalog' %}
+                    </div>
                     <div id="tree_container"></div>
                 </div>
                 <div id="right-col">
