--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -27,6 +27,7 @@
     <script src="{% static 'catalog/admin/backbone.js' %}"></script>
     <script src="{% static 'catalog/admin/jstree/jstree.min.js' %}"></script>
     <script src="{% static 'catalog/admin/tablesorter/jquery.tablesorter.js' %}"></script>
+    <script src="{% static 'catalog/admin/tablesorter/jquery.tablesorter.widgets.js' %}"></script>
     <script src="{% static 'catalog/admin/modernizr.localstorage.min.js' %}"></script>
     <script src="{% static 'catalog/admin/app.js' %}"></script>
     <script>
@@ -81,7 +82,10 @@
                     <div id="list_items_container"></div>
                 </div>
             </div>
-
+            <script type="text/template" id="input_tpl">
+                <input <% if(type == 'checkbox' && value == 't'){ %>checked="checked"<% } %> type="<%= type %>" value="<%= value %>" >
+                <div class="save">save</div>
+            </script>
             <script type="text/template" id="table_items_tpl">
                 <table class="tablesorter" id="list_table"  >
                     <thead>
@@ -93,9 +97,22 @@
                     </thead>
                     <tbody>
                         <% _.each(items, function(item){ %>
-                            <tr>
+                            <tr id="<%= item.id %>">
                                 <% _.each(fields, function(field){ %>
-                                    <td><%= item[field[0]] %></td>
+                                    <td class="<% if(item[field[0]].editable){ %>editable<% } %>"
+                                        data-type="<%= item[field[0]].type %>"
+                                            data-name="<%= field[0] %>">
+                                        <% if(item[field[0]].type == 'checkbox' && item[field[0]].value == 't'){ %>
+                                            <img src="/static/admin/img/icon-yes.gif" alt="<%= item[field[0]].value %>">
+                                        <% } %>
+                                        <% if(item[field[0]].type == 'checkbox' && item[field[0]].value == 'f'){ %>
+                                            <img src="/static/admin/img/icon-no.gif" alt="<%= item[field[0]].value %>">
+                                        <% } %>
+                                        <% if(item[field[0]].type != 'checkbox'){ %>
+                                            <%= item[field[0]].value %>
+                                        <% } %>
+                                    </td>
+
                                 <% }); %>
                             </tr>
                         <% }); %>
