--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -24,6 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'catalog/admin/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'catalog/admin/underscore.min.js' %}"></script>
+    <script src="{% static 'catalog/admin/jquery.cookie.js' %}"></script>
     <script src="{% static 'catalog/admin/backbone.js' %}"></script>
     <script src="{% static 'catalog/admin/jstree/jstree.min.js' %}"></script>
     <script src="{% static 'catalog/admin/tablesorter/jquery.tablesorter.js' %}"></script>
@@ -82,6 +83,17 @@
                     <div id="list_items_container"></div>
                 </div>
             </div>
+            <script type="text/template" id="cell_tpl">
+               <% if(type == 'checkbox'){
+                      if(value == 't') { %>
+                          <img src="{% static 'admin/img/icon-yes.gif' %}" alt="<%= value %>">
+                      <% } else { %>
+                          <img src="{% static 'admin/img/icon-no.gif' %}" alt="<%= value %>">
+                      <% } %>
+               <% } else { %>
+                   <%= value %>
+               <% } %>
+            </script>
             <script type="text/template" id="input_tpl">
                 <input <% if(type == 'checkbox' && value == 't'){ %>checked="checked"<% } %> type="<%= type %>" value="<%= value %>" >
                 <div class="save">save</div>
@@ -102,15 +114,8 @@
                                     <td class="<% if(item[field[0]].editable){ %>editable<% } %>"
                                         data-type="<%= item[field[0]].type %>"
                                             data-name="<%= field[0] %>">
-                                        <% if(item[field[0]].type == 'checkbox' && item[field[0]].value == 't'){ %>
-                                            <img src="/static/admin/img/icon-yes.gif" alt="<%= item[field[0]].value %>">
-                                        <% } %>
-                                        <% if(item[field[0]].type == 'checkbox' && item[field[0]].value == 'f'){ %>
-                                            <img src="/static/admin/img/icon-no.gif" alt="<%= item[field[0]].value %>">
-                                        <% } %>
-                                        <% if(item[field[0]].type != 'checkbox'){ %>
-                                            <%= item[field[0]].value %>
-                                        <% } %>
+                                        <% var html = templateHelper('cell_tpl', {type: item[field[0]].type, value: item[field[0]].value}); %>
+                                        <%= html %>
                                     </td>
 
                                 <% }); %>
