Добавил возможность отмены редактирования.

--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -97,6 +97,7 @@
             <script type="text/template" id="input_tpl">
                 <input <% if(type == 'checkbox' && value == 't'){ %>checked="checked"<% } %> type="<%= type %>" value="<%= value %>" >
                 <div class="save">save</div>
+                <div class="cancel">cancel</div>
             </script>
             <script type="text/template" id="table_items_tpl">
                 <table class="tablesorter" id="list_table"  >
