--- a/catalog/static/catalog/admin/catalog.css
+++ b/catalog/static/catalog/admin/catalog.css
@@ -76,6 +76,10 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
     color: #fff;
 }
 
+#list_table td.editable {
+    cursor: pointer;
+}
+
 #list_table td input {
     float: left;
 }
