--- a/catalog/static/catalog/admin/catalog.css
+++ b/catalog/static/catalog/admin/catalog.css
@@ -84,12 +84,13 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
     background: #a0db8e;
 }
 
-#list_table td.accept_value.active-edit {
-    background: #fff;
+#list_table td.error {
+   background: #fff;
 }
 
 #list_table td input {
     float: left;
+    border: none;
 }
 
 #list_table td.error input {
