--- a/catalog/static/catalog/admin/catalog.css
+++ b/catalog/static/catalog/admin/catalog.css
@@ -107,21 +107,31 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
     background: #a0db8e;
 }
 
-#list_table .save {
+#list_table .action {
     text-align: center;
 }
 
-#list_table .save button {
+#list_table button.save,
+#list_table button.change {
     cursor: pointer;
     border: none;
     border-radius: 2px;
+    width: 85px;
     padding: 5px;
     color: #fff;
-    font-weight: bold;
+}
+
+#list_table button.change {
+    margin-bottom: 5px;
+    background: #79aec8;
+}
+
+#list_table button.save {
+    margin: 5px 0;
     background: rgba(160, 219, 142, 1);
 }
 
-#list_table .save button[disabled] {
+#list_table button.save[disabled] {
     background: rgba(160, 219, 142, 0.6);
 }
 
