--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -102,7 +102,7 @@
                     <%= html %>
                 </td>
             </script>
-            <script type="text/template" id="save_tpl">
+            <script type="text/template" id="action_tpl">
                 <td class="action">
                 <% if(edit){ %>
                 <button class="save" disabled>{% trans 'Save' %}</button>
