--- a/catalog/templates/admin/catalog/tree_list.html
+++ b/catalog/templates/admin/catalog/tree_list.html
@@ -20,8 +20,10 @@
     {{ block.super }}
     {{ media.js }}
     <script src="/static/admin/js/core.js"></script>
+    <script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js">  </script>
+    <script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
     <script src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <script src="{% static 'catalog/admin/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'catalog/admin/underscore.min.js' %}"></script>
     <script src="{% static 'catalog/admin/jquery.cookie.js' %}"></script>
@@ -45,7 +47,6 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ app_config.verbose_name }}</a>
 &rsaquo; {{ opts.verbose_name_plural|capfirst }}
 </div>
 {% endblock %}
